webtop/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webtop-service
  name: webtop-service
  namespace: webtop
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: web
  selector:
    app: webtop
