webtop/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webtop
  namespace: webtop
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "webtop.ucdialplans.com"
  rules:
  - backendRefs:
    - name: webtop-service
      namespace: webtop
      kind: Service
      port: 3000
