webtop/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webtop
  namespace: webtop
spec:
  endpointSelector:
    matchLabels:
      app: webtop
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"        
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "3000"
